--- a/style.css
+++ b/style.css
@@ -1,3 +1,58 @@
+body {
+  overflow-x: hidden;
+}
+.errormessage {
+  display: none;
+  color: red;
+}
+
+
+/* tryout */
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 500px;
+  height: auto;
+}
+
+.wrapper ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.wrapper ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.library {
+  /* border: 2px solid lightgray; */
+  box-shadow: 0px 1px 6px rgba(0,0,0,0.2);
+  padding: 0;
+  border-radius: 8px;
+}
+
+.library li {
+  padding: 8px;
+  /* border-radius: 8px; */
+}
+
+.line {
+  border-bottom: 2px solid red;
+  width: 100px;
+}
+
+.library li:nth-child(odd) {
+  background-color: lightgrey;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -5,7 +60,21 @@
   max-width: 300px;
 }
 
-.errormessage {
-  display: none;
-  color: red;
+button {
+  /* background-color: #003366; */
+  color: #fff;
+  border:none;
+  border-radius: 8px;
+  padding: 4px;
+  width: 60px;
 }
+
+.form button {
+  background-color: lightgrey;
+  color: black;
+  position: relative;
+  float: right;
+}
+
+
+
